modification du bouton pour supprimer post

--- a/src/app/post-list-item/post-list-item.component.html
+++ b/src/app/post-list-item/post-list-item.component.html
@@ -11,7 +11,7 @@
     </div>
     <div style="float : right;">
       <button class="btn btn-default pull-right" (click)="onDelete()">
-        <span class="glyphicon glyphicon-minus"></span>
+        <span>Supprimer Post</span>
       </button>
     </div>
     <div style="clear: both;"></div>
